@@ -1,5 +1,6 @@
 from ucommon 5.2.0 to 5.2.1
 - fixed issue with static linking initialization order
+- shell release method
 
 from ucommon 5.1.2 to 5.2.0
 - improved shell::detach support and new pdetach utility
